--- a/style.css
+++ b/style.css
@@ -4,33 +4,23 @@ body {
     font-family: 'Montserrat', sans-serif;
 }
 
-.banner-section {
-    width: 90%;
-    margin: 0 auto;
-    background-image: url(images/Group\ 8450.png);
-    background-repeat: no-repeat;
-    background-size: 700px ;
-    background-position: right;
-
-}
-
-.flaxible-area{
+.banner-section{
     display: flex;
 }
 
-.width-half {
+.banner-content{
     width: 50%;
-    margin-top: 100px;
+    padding: 80px 30px;
 }
 
-.width-half h1 {
-    font-size: 70px;
+.banner-content h1{
     color: #575757;
+    font-size: 70px;
 }
 
-.width-half p {
+.banner-content p{
+    color: #999999;
     font-size: 20px;
-    color: #999;
     padding-bottom: 50px;
 }
 
@@ -41,14 +31,93 @@ body {
 .link-button {
     text-decoration: none;
     background-image: linear-gradient(orange, tomato);
-    padding: 20px 40px;
+    padding: 25px 50px;
     color: #fff;
     font-weight: 600;
     border-radius: 40px;
     margin-top: 30px;
+    font-size: 20px;
 }
 
-.width-half img{
+.banner-image{
+    width: 50%;
+    padding: 30px;
+}
+
+.banner-image img{
     width: 100%;
-    margin-top: -50px;
+}
+
+.about-me{
+    display: flex;
+    background-image: url(images/7.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+.about-image{
+    width: 50%;
+    padding: 30px;
+}
+
+.about-image img{
+    width: 70%;
+    margin-left: 200px;
+    margin-top: 20px;
+}
+
+.about-content{
+    width: 50%;
+    padding: 30px 200px;
+    margin-top: 50px;
+
+}
+
+ h2{
+    font-size: 40px;
+    color: #575757;
+    padding-bottom: 10px;
+}
+
+.about-content p{
+    font-size: 20px;
+    padding-bottom: 80px;
+}
+
+.my-recipies{
+    width: 95%;
+    margin: 10px auto;
+}
+
+.recipies-text{
+    text-align: center;
+}
+
+.recipies-text p{
+    font-size: 20px;
+    padding: 0 400px;
+}
+
+.recipies-title{
+    display: flex;
+    margin-top: 50px;
+}
+
+.recipies-item{
+    width: 43%;
+    margin-left: 2%;
+    margin-right: 2%;
+    box-shadow: 0px 5px 20px  gray;
+    border-radius: 20px;
+    padding: 20px;
+}
+.recipies-item img{
+    width: 100%;
+}
+.recipies-item h3{
+    font-size: 30px;
+}
+.recipies-item p{
+    font-size: 20px;
 }
