--- a/style.css
+++ b/style.css
@@ -121,3 +121,23 @@ body {
 .recipies-item p{
     font-size: 20px;
 }
+
+.social-media{
+    width: 90%;
+    margin: 100px auto;
+    display: flex;
+    justify-content: space-between;
+    box-shadow: 0px 5px 20px #999999;
+    border-radius: 10px;
+}
+
+.youtube{
+    width: 30%;
+    text-align: center;
+}
+.youtube h1 {
+    font-size:40px;
+}
+.youtube p{
+    font-size: 18px;
+}
